# cachaza

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: providers.example.env
docs/: METHODOLOGY.md  MIGRATION.md  OPTIONAL_TOOLS.md
src/cachaza/: __init__.py  __main__.py  cli.py  cloud.py  console.py  credentials.py  external.py  html_report.py  http.py  jsmap_cli.py  managed_tools.py  models.py  monitor.py  network_policy.py  origin.py  pipeline.py  profiles.py  reports.py  safety.py  signatures.py  sources.py  update.py  web.py  workspace.py
src/cachaza/adapters/: __init__.py  base.py  blackwidow.py  cariddi.py  common.py  contacts.py  csp_stalker.py  dns_enum.py  dnsx.py  favicorn.py  gau.py  harvester.py  jsmap.py  jump403.py  katana.py  nuclei.py  origin.py  smap.py  vulnx.py  waf.py
tests/: test_adapters_discovery.py  test_adapters_security.py  test_adapters_web.py  test_cli.py  test_cloud.py  test_credentials.py  test_enrichment.py  test_external.py  test_managed_tools.py  test_network_policy.py  test_origin.py  test_profiles.py  test_reporting_security.py  test_reports.py  test_resume.py  test_safety.py  test_signatures.py  test_sources.py  test_specialized.py  test_waf_safety.py  test_web_inventory.py
